--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "i": "^0.3.7",
         "multer": "^1.4.5-lts.2",
         "npm": "^11.3.0",
+        "pdf-parse": "^1.1.1",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1"
     },
