--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
         "i": "^0.3.7",
         "multer": "^1.4.5-lts.2",
         "npm": "^11.3.0",
-        "pdf-parse": "^1.1.1",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1"
     },
@@ -61,19 +60,13 @@
         "typescript-eslint": "^8.20.0"
     },
     "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
+        "moduleFileExtensions": ["js", "json", "ts"],
         "rootDir": "src",
         "testRegex": ".*\\.spec\\.ts$",
         "transform": {
             "^.+\\.(t|j)s$": "ts-jest"
         },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
+        "collectCoverageFrom": ["**/*.(t|j)s"],
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
     }
