--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
 
-MODEL='llama3'
+MODEL='llama3.1:8b'
 API_URL='http://localhost:11434/v1/chat/completions'
-PDF_PATH='SiMCCIT_Apendice1.pdf'
-OUTPUT_PATH='saida_categorizada.json'
