--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test": "vitest",
+        "test:ui": "vitest --ui"
     },
     "dependencies": {
         "@nestjs/axios": "^4.0.0",
@@ -33,7 +30,8 @@
         "multer": "^1.4.5-lts.2",
         "npm": "^11.3.0",
         "reflect-metadata": "^0.2.2",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.1",
+        "vitest": "^3.2.2"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
@@ -48,6 +46,7 @@
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.7",
         "@types/supertest": "^6.0.2",
+        "@vitest/ui": "^3.2.2",
         "globals": "^16.0.0",
         "jest": "^29.7.0",
         "source-map-support": "^0.5.21",
@@ -60,13 +59,19 @@
         "typescript-eslint": "^8.20.0"
     },
     "jest": {
-        "moduleFileExtensions": ["js", "json", "ts"],
+        "moduleFileExtensions": [
+            "js",
+            "json",
+            "ts"
+        ],
         "rootDir": "src",
         "testRegex": ".*\\.spec\\.ts$",
         "transform": {
             "^.+\\.(t|j)s$": "ts-jest"
         },
-        "collectCoverageFrom": ["**/*.(t|j)s"],
+        "collectCoverageFrom": [
+            "**/*.(t|j)s"
+        ],
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
     }
